# demon

./: .gitignore  CLAUDE.md  Cargo.toml  GOAL.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_V2.md  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: cli.rs  root_validation.rs
