[package]
name = "demon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
ctrlc = "3.4.7"
notify = "8.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
